--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.15",
+    "unidecode": "^1.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
@@ -37,6 +38,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/react-slick": "^0.23.13",
     "@types/swiper": "^5.4.3",
+    "@types/unidecode": "^0.1.3",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
